Add qandi, specification template

--- a/docs/Y2024.md
+++ b/docs/Y2024.md
@@ -1,1 +1,17 @@
 # 2024
+
+## FPGA
+
+### SPI to ICE40 Programming
+
+OLIMEX [32U4 to ICE40](https://www.olimex.com/wiki/ICE40HX1K-EVB#Preparing_OLIMEXINO-32U4_as_programmer)
+
+## STM32
+
+### Onewire
+
+My Gist [Gist](https://gist.github.com/tzechienchu/5565e37916d7e673d84bc97ff9e66527)
+
+tutorials [pycom.io](https://docs.pycom.io/tutorials/hardware/owd/)
+
+nimaltd ds18b20 [github.com](https://github.com/nimaltd/ds18b20/blob/master/README.md)
