--- a/docs/Y2025-01.md
+++ b/docs/Y2025-01.md
@@ -22,6 +22,8 @@ read_buf = slave.exchange(write_buf, duplex=True)
 
 Analog Device [AN-1177](https://www.analog.com/en/resources/app-notes/an-1177.html)
 
+![AN4670 Example 1 to 10](images/2025/AN4670.PNG){: style="height:300px"}
+
 ## 2025-01-13
 
 ### Evolutionary Neural Coding Lab
