--- a/docs/Y2024.md
+++ b/docs/Y2024.md
@@ -2,6 +2,14 @@
 
 ## FPGA
 
+### RIffa
+
+[RIFFA_A_Reusable_Integration_Framework_for_FPGA_Accelerators](https://www.researchgate.net/publication/261396774_RIFFA_A_Reusable_Integration_Framework_for_FPGA_Accelerators)
+
+[https://kastner.ucsd.edu/wp-content/uploads/2014/04/admin/fpl-riffa2.pdf](https://kastner.ucsd.edu/wp-content/uploads/2014/04/admin/fpl-riffa2.pdf)
+
+[https://github.com/KastnerRG/riffa](https://github.com/KastnerRG/riffa)
+
 ### SPI to ICE40 Programming
 
 OLIMEX [32U4 to ICE40](https://www.olimex.com/wiki/ICE40HX1K-EVB#Preparing_OLIMEXINO-32U4_as_programmer)
@@ -107,3 +115,9 @@ RGB24 to RGB16 565 Converter
 [https://www.sciencedirect.com/science/article/pii/S2468067223000366](https://www.sciencedirect.com/science/article/pii/S2468067223000366)
 
 [https://github.com/ThomasAkam/active_commutator](https://github.com/ThomasAkam/active_commutator)
+
+## PCB
+
+### PCB Ground Plane
+
+[the-basic-guidelines-for-layout-design-of-mixed-signal](https://www.analog.com/en/resources/analog-dialogue/articles/what-are-the-basic-guidelines-for-layout-design-of-mixed-signal-pcbs.html)
