--- a/docs/Y2025-01.md
+++ b/docs/Y2025-01.md
@@ -61,3 +61,20 @@ Wearable_EEG_electronics_for_a_Brain-AI_Closed-Loop_System_to_enhance_autonomous
 ### PyFTDI for Intan
 
 [FT2232_SPI_Intan](subtitles/FT2232_SPI_Intan.md)
+
+## 2025-01-20
+
+### Paper Reading 2025-01-20
+
+[Intan ADC Missing Code and Missing Decison Level](papers/Barth_2024_J._Neural_Eng._21_044001.pdf)
+
+[Fix SARADC Issues](papers/2012_JETTA_SARADC.pdf)
+
+Scalogram
+![](images/2025/Screenshot%20from%202025-01-20%2016-17-20.png)
+
+Missing Decision Level
+![](images/2025/Screenshot%20from%202025-01-20%2016-36-13.png)
+
+Missing Code
+![](images/2025/Screenshot%20from%202025-01-20%2016-36-28.png)
