Add Intan ADC Missing Code Paper (Non linear)

--- a/docs/Y2025-01.md
+++ b/docs/Y2025-01.md
@@ -70,11 +70,18 @@ Wearable_EEG_electronics_for_a_Brain-AI_Closed-Loop_System_to_enhance_autonomous
 
 [Fix SARADC Issues](papers/2012_JETTA_SARADC.pdf)
 
-Scalogram
-![](images/2025/Screenshot%20from%202025-01-20%2016-17-20.png)
-
 Missing Decision Level
 ![](images/2025/Screenshot%20from%202025-01-20%2016-36-13.png)
 
 Missing Code
 ![](images/2025/Screenshot%20from%202025-01-20%2016-36-28.png)
+
+Before Software Calibration
+![](images/2025/Screenshot%20from%202025-01-20%2016-52-57.png)
+
+After Software Calibration
+![](images/2025/Screenshot%20from%202025-01-20%2016-53-28.png)
+
+[What is Scalogram](https://zh.wikipedia.org/zh-tw/%E9%80%A3%E7%BA%8C%E5%B0%8F%E6%B3%A2%E8%BD%89%E6%8F%9B)
+
+![](images/2025/Screenshot%20from%202025-01-20%2016-17-20.png)
