Add personal page

--- a/docs/Y2025-01.md
+++ b/docs/Y2025-01.md
@@ -6,6 +6,15 @@
 [晶片技術大突破！Cerebras 如何實現比一般晶片多 100 倍的缺陷容忍度？ | T客邦](https://www.techbang.com/posts/120907-a-big-breakthrough-in-chip-technology-how-does-cerebras)
 ![](images/2025/Screenshot%20from%202025-01-21%2012-37-31.png)
 
+DMA : Streaming DMA and Coherent DMA
+![DMA Mapping](images/2025/Screenshot%20from%202025-01-20%2014-44-01.png)
+
+[Verse.ai](https://www.verses.ai/research-blog/achieving-human-level-atari-gameplay-with-bayesian-object-priors-and-active-inference)
+
+![](images/2025/Screenshot%20from%202025-01-21%2016-11-29.png)
+
+[MKV File Format](https://cloudinary.com/guides/video-formats/mkv-format-what-is-mkv-how-it-works-and-how-it-compares-to-mp4)
+
 ## 2025-01-20
 
 ### Paper Reading 2025-01-20
@@ -27,6 +36,8 @@ After Software Calibration
 ![](images/2025/Screenshot%20from%202025-01-20%2016-53-28.png)
 
 [What is Scalogram](https://zh.wikipedia.org/zh-tw/%E9%80%A3%E7%BA%8C%E5%B0%8F%E6%B3%A2%E8%BD%89%E6%8F%9B)
+
+[spkit.github.io wavelet analysis](https://spkit.github.io/auto_examples/wavelet_analysis/plot_sp_scalogram_cwt_example.html)
 
 ![](images/2025/Screenshot%20from%202025-01-20%2016-17-20.png)
 
