Move month doc to year folder

--- a/docs/Y2025/Y2025-01.md
+++ b/docs/Y2025/Y2025-01.md
@@ -4,14 +4,14 @@
 ## 2025-01-21
 
 [晶片技術大突破！Cerebras 如何實現比一般晶片多 100 倍的缺陷容忍度？ | T客邦](https://www.techbang.com/posts/120907-a-big-breakthrough-in-chip-technology-how-does-cerebras)
-![](images/2025/Screenshot%20from%202025-01-21%2012-37-31.png)
+![](../images/2025/Screenshot%20from%202025-01-21%2012-37-31.png)
 
 DMA : Streaming DMA and Coherent DMA
-![DMA Mapping](images/2025/Screenshot%20from%202025-01-20%2014-44-01.png)
+![DMA Mapping](../images/2025/Screenshot%20from%202025-01-20%2014-44-01.png)
 
 [Verse.ai](https://www.verses.ai/research-blog/achieving-human-level-atari-gameplay-with-bayesian-object-priors-and-active-inference)
 
-![](images/2025/Screenshot%20from%202025-01-21%2016-11-29.png)
+![](../images/2025/Screenshot%20from%202025-01-21%2016-11-29.png)
 
 [MKV File Format](https://cloudinary.com/guides/video-formats/mkv-format-what-is-mkv-how-it-works-and-how-it-compares-to-mp4)
 
@@ -19,27 +19,27 @@ DMA : Streaming DMA and Coherent DMA
 
 ### Paper Reading 2025-01-20
 
-[Intan ADC Missing Code and Missing Decison Level](papers/2025/Barth_2024_J._Neural_Eng._21_044001.pdf)
+[Intan ADC Missing Code and Missing Decison Level](../papers/2025/Barth_2024_J._Neural_Eng._21_044001.pdf)
 
-[Fix SARADC Issues](papers/2025/2012_JETTA_SARADC.pdf)
+[Fix SARADC Issues](../papers/2025/2012_JETTA_SARADC.pdf)
 
 Missing Decision Level
-![](images/2025/Screenshot%20from%202025-01-20%2016-36-13.png)
+![](../images/2025/Screenshot%20from%202025-01-20%2016-36-13.png)
 
 Missing Code
-![](images/2025/Screenshot%20from%202025-01-20%2016-36-28.png)
+![](../images/2025/Screenshot%20from%202025-01-20%2016-36-28.png)
 
 Before Software Calibration
-![](images/2025/Screenshot%20from%202025-01-20%2016-52-57.png)
+![](../images/2025/Screenshot%20from%202025-01-20%2016-52-57.png)
 
 After Software Calibration
-![](images/2025/Screenshot%20from%202025-01-20%2016-53-28.png)
+![](../images/2025/Screenshot%20from%202025-01-20%2016-53-28.png)
 
 [What is Scalogram](https://zh.wikipedia.org/zh-tw/%E9%80%A3%E7%BA%8C%E5%B0%8F%E6%B3%A2%E8%BD%89%E6%8F%9B)
 
 [spkit.github.io wavelet analysis](https://spkit.github.io/auto_examples/wavelet_analysis/plot_sp_scalogram_cwt_example.html)
 
-![](images/2025/Screenshot%20from%202025-01-20%2016-17-20.png)
+![](../images/2025/Screenshot%20from%202025-01-20%2016-17-20.png)
 
 ## 2025-01-16
 
@@ -53,7 +53,7 @@ After Software Calibration
 
 SYZYGY Interface [syzygyfpga.io](https://syzygyfpga.io/)
 
-![Opal Kelly](images/2025/syzygy-brain-peripherals_jpg_md-xl.jpg)
+![Opal Kelly](../images/2025/syzygy-brain-peripherals_jpg_md-xl.jpg)
 
 ### Paper Reading 2025-01-16
 
@@ -63,13 +63,13 @@ Wearable_EEG_electronics_for_a_Brain-AI_Closed-Loop_System_to_enhance_autonomous
 
 ### PyFTDI for Intan
 
-[FT2232_SPI_Intan](subtitles/FT2232_SPI_Intan.md)
+[FT2232_SPI_Intan](../subtitles/FT2232_SPI_Intan.md)
 
 ## 2025-01-13
 
 ### Evolutionary Neural Coding Lab
 
-![EvolutionaryNeuralCodingLab](images/2025/Screenshot%20from%202025-01-13%2009-45-40.png)
+![EvolutionaryNeuralCodingLab](../images/2025/Screenshot%20from%202025-01-13%2009-45-40.png)
 
 Github [EvolutionaryNeuralCodingLab](https://github.com/EvolutionaryNeuralCodingLab)
 
@@ -85,7 +85,7 @@ ReptiLearn: An automated home cage system for behavioral experiments in reptiles
 
 Analog Device [AN-1177](https://www.analog.com/en/resources/app-notes/an-1177.html)
 
-![AN4670 Example 1 to 10](images/2025/AN4670.PNG){: style="height:300px"}
+![AN4670 Example 1 to 10](../images/2025/AN4670.PNG){: style="height:300px"}
 
 ## 2025-01-02
 
