Add dio test diagram

--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -1,1 +1,15 @@
 # 2025-02
+
+## 2025-02-03
+
+### PICO PIO
+
+[Raspberry Pi Pico PIO Video](https://www.youtube.com/playlist?list=PLiRALtgGsxmZs_LXGkh09Zr2NUmk_mtEI)
+
+[programmable-io-programming @ circuitcellar](https://circuitcellar.com/research-design-hub/basics-of-design/programmable-io-programming/)
+
+### Test DIO for Diagram
+
+Generate from test.dio
+
+![Test.png](../diagrams/test.png)
