Add more diagram

--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -20,11 +20,19 @@
 
 ### Test DIO for Diagram
 
-Wireless.dio to Png
+Wireless.dio
 
-![Test.png](../diagrams/2025/Wireless.png)
+![Wireless](../diagrams/2025/Wireless.png)
 
-### Sipeed
+DAQ2DAQ.dio
+
+![DAQ2DAQ](../diagrams/2025/DAQ2DAQ.png)
+
+SyncDistribution.dio
+
+![SyncDistribution](../diagrams/2025/SyncDistribution.png)
+
+### Sipeed FPGA Console use Gowin
 
 [sipeed console URL](https://www.hackster.io/news/sipeed-takes-on-the-mighty-mister-with-its-tang-console-fpga-development-board-112a417b3ec6)
 
