--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -1,5 +1,15 @@
 # 2025-02
 
+## 2025-02-05
+
+### Google Rust Course
+
+[Google Comprehensive Rust Course](https://google.github.io/comprehensive-rust/)
+
+### TSMC Revenu
+
+![TSMC 2024-03 Revenu ](../images/2025/Screenshot%20from%202025-02-05%2010-49-51.png)
+
 ## 2025-02-04
 
 ### System B 2025
@@ -27,6 +37,19 @@
 [A Practical Look at PIO on the Raspberry Pi Pico URL](https://blues.com/blog/raspberry-pi-pico-pio/)
 
 [Introduction to the PIO (Programmable Input Output) of the RP2040](https://tutoduino.fr/en/pio-rp2040-en/)
+
+### Chip Alliance
+
+![](../images/2025/Screenshot%20from%202025-02-04%2016-58-19.png)
+
+[Chip Alliance](https://www.chipsalliance.org/)
+
+    Chisel HDL
+    F4FPGA
+
+### John Maynard Keynes
+
+[Masters Of Money | Part 1 | John Maynard Keynes](https://www.youtube.com/watch?v=CkHooEp3vRE)
 
 ## 2025-02-03
 
