Add Xdaq Connect DIO

--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -2,11 +2,15 @@
 
 ## 2025-02-06
 
+### XDAQ Connect Pipe
+
+![](../diagrams/2025/xdaq_connect.png)
+
 ### Brain in the Loop
 
 "cerebral organoids,” small artificial brain tissues, created using iPS cells
 
-[rain Processing Unit ](https://www.creativeapplications.net/robotics/brain-processing-unit-artificial-brain-tissue-apis/)
+[Brain Processing Unit ](https://www.creativeapplications.net/robotics/brain-processing-unit-artificial-brain-tissue-apis/)
 
 ### Low bit LLM on Edge
 
