Remove Personal QandI

--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -1,11 +1,23 @@
 # 2025-02
 
+## 2025-02-10
+
+[![Liberux](../images/2025/Screenshot%20from%202025-02-10%2010-22-48.png) Liberux Linux Phone](https://liberux.net/)
+
+### NNStreammer
+
+[![NNStreammer](../images/2025/Screenshot%20from%202025-02-10%2010-11-59.png) NNStreammer](https://nnstreamer.ai/)
+
 ## 2025-02-08
+
+### UScope Linux Debugger
 
 [![UScope](../images/2025/Screenshot%20from%202025-02-08%2010-38-09.png){: style="height:450px"}  
  UScope: A New Linux Debugger And Not A GDB Shell, Apparently](https://hackaday.com/2025/02/07/uscope-a-new-linux-debugger-and-not-a-gdb-shell-apparently/)
 
 ## 2025-02-07
+
+### FPGA SDCard and XDMA
 
 [FPGA as SD Card](https://github.com/WangXuan95/FPGA-SDfake)
 
