Add Serdes Headstage

--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -2,6 +2,10 @@
 
 ## 2025-02-11
 
+### System C
+
+[System C](../subtitles/SystemC.md)
+
 ### Efinix FPGA with HyperRAM and SPI Flash
 
 | FPGA        |  HyperRAM     |  CLB          | Board           |
