--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -4,7 +4,7 @@
 
 ### System C
 
-[System C](../subtitles/SystemC.md)
+[System C 2025](../subtitles/SystemC_2025.md)
 
 ### Efinix FPGA with HyperRAM and SPI Flash
 
@@ -141,7 +141,7 @@ either the LCD Shield or another microcontroller.
 
 ### System B 2025
 
-[SystemB.md](../subtitles/SystemB.md)
+[SystemB_2025.md](../subtitles/SystemB_2025.md)
 
 ### Reasons not to refactor
 
