--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -1,8 +1,21 @@
 # 2025-02
 
+## 2025-02-12
+
+### Chrome App Mode
+
+    chromeでアプリモード
+    chromeでつぎのようにすると単独のアプリモードで起動できる。
+    $ chrome -app=http://hoge.com/
+    これはこれで良いのかも…
+
+### System D 2025
+
+[System D 2025](../subtitles/SystemD_2025.md)
+
 ## 2025-02-11
 
-### System C
+### System C 2025
 
 [System C 2025](../subtitles/SystemC_2025.md)
 
