Add micropython adc

--- a/docs/Y2025/Y2025-02.md
+++ b/docs/Y2025/Y2025-02.md
@@ -2,6 +2,21 @@
 
 ## 2025-02-14
 
+### Micropython pyBoard DAC use DMA
+
+```py
+import math
+from array import array
+from pyb import DAC
+
+# create a buffer containing a sine-wave, using half-word samples
+buf = array('H', 2048 + int(2047 * math.sin(2 * math.pi * i / 128)) for i in range(128))
+
+# output the sine-wave at 400Hz
+dac = DAC(1, bits=12)
+dac.write_timed(buf, 400 * len(buf), mode=DAC.CIRCULAR)
+```
+
 ### Any-Maze
 
 [![any-maze](../images/2025/Screenshot%20from%202025-02-14%2016-00-30.png) any-maze](https://www.any-maze.com/)
